# fks_transformer

./: DOCKERFILE_SELECTION.md  Dockerfile  Dockerfile.simple.gpu  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/scripts/: check_legacy_imports.py  coverage_check.py
.github/workflows/: fks_transformer-ci.yml
src/: __init__.py  app.py  main.py  pyproject.toml  service.py
src/data/: __init__.py  gc_data_fetcher.py  gc_data_updater.py  gc_data_validator.py  gc_headlines_fetcher.py  import pytest.py  main_update_script.py
src/enrichment/: __init__.py  entity_linking.py  event_impact.py  market_context.py
src/models/: __init__.py  hmm_transformer.py
src/models/ner/: __init__.py  company_extractor.py  financial_ner.py
src/models/sentiment/: __init__.py  custom.py  ensemble.py  finbert.py
src/models/summarization/: __init__.py  news_summarizer.py
src/pipelines/: __init__.py  batch.py  hmm_tf_pipeline.py  realtime.py  streaming.py
src/processors/: __init__.py  data_prep.py  market_context.py  market_sentiment.py
src/processors/news/: __init__.py  article_parser.py  event_detector.py  headline_analyzer.py
src/processors/reports/: __init__.py  earnings_parser.py  sec_analyzer.py
src/processors/social/: __init__.py  reddit_analyzer.py  twitter_analyzer.py
tests/: test_import.py  test_predict.py
