[project]
name = "fks_transformer"
version = "0.1.0"
description = "FKS Transformer Inference Service"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = ["FKS <nunie.smith01@gmail.com>"]

dependencies = [
  "numpy",
  "pandas",
  "shared_python @ file://../../../shared/shared_python",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fks_transformer*"]

[project.optional-dependencies]
ml = ["torch", "scikit-learn"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
